--- a/angular-web-app/src/app/components/calendar-card/calendar-card.component.html
+++ b/angular-web-app/src/app/components/calendar-card/calendar-card.component.html
@@ -5,7 +5,7 @@
       <!-- from -->
       <div class="calendar-date">
         <h6 class="txt-secondary text-uppercase mb-0"> {{ getDay(startDate.getDay()) }} </h6>
-        <h5 class="mb-0"> {{ startDate.getDate() }} {{ getMonth(startDate.getMonth()) }} </h5>
+        <h5 class="mb-0"> {{ startDate.getDate() }} {{ getMonth(startDate.getMonth()) }} {{ startDate.getFullYear() }}</h5>
       </div>
       <!-- divider -->
       <div *ngIf="multipleDays()" class="calendar-date-divider">
@@ -14,7 +14,7 @@
       <!-- until -->
       <div *ngIf="multipleDays()" class="calendar-date">
         <h6 class="txt-primary text-uppercase mb-0"> {{ getDay(endDate.getDay()) }} </h6>
-        <h5 class="mb-0"> {{ endDate.getDate() }} {{ getMonth(endDate.getMonth()) }} </h5>
+        <h5 class="mb-0"> {{ endDate.getDate() }} {{ getMonth(endDate.getMonth()) }} {{ startDate.getFullYear() }}</h5>
       </div>
     </div>
   </div>
