--- a/angular-web-app/src/app/components/calendar-card/calendar-card.component.html
+++ b/angular-web-app/src/app/components/calendar-card/calendar-card.component.html
@@ -1,4 +1,4 @@
-<div class="row mb-5">
+<div class="row">
   <!-- date -->
   <div class="col-12 col-sm-3">
     <div class="calendar-date-wrapper">
