removed save disabled

--- a/angular-web-app/src/app/components/_admin/comp-calendar/comp-calendar.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-calendar/comp-calendar.component.html
@@ -45,8 +45,7 @@
     </mat-card>
 
 
-    <button mat-flat-button color="accent" type="submit"
-      [disabled]="!calendarContentForm.form.valid || calendarContentForm.form.pristine">
+    <button mat-flat-button color="accent" type="submit">
       Opslaan
     </button>
     <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="calendarContentForm.form.pristine"
