--- a/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
@@ -103,8 +103,7 @@
       </div>
     </mat-card>
 
-    <button mat-flat-button color="accent" type="submit"
-      [disabled]="!contactFormForm.form.valid || contactFormForm.form.pristine">
+    <button mat-flat-button color="accent" type="submit">
       Opslaan
     </button>
     <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="contactFormForm.form.pristine"
