--- a/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
@@ -105,7 +105,7 @@
       </div>
     </mat-card>
 
-    <button mat-flat-button color="accent" type="submit" [disabled]="!ctaForm.form.valid || ctaForm.form.pristine">
+    <button mat-flat-button color="accent" type="submit">
       Opslaan
     </button>
     <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="ctaForm.form.pristine"
