--- a/angular-web-app/src/app/components/_admin/comp-gallery/comp-gallery.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-gallery/comp-gallery.component.html
@@ -81,8 +81,7 @@
       </div>
     </mat-card>
 
-    <button mat-flat-button color="accent" type="submit"
-      [disabled]="!galleryContentForm.form.valid || galleryContentForm.form.pristine">
+    <button mat-flat-button color="accent" type="submit">
       Opslaan
     </button>
     <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="galleryContentForm.form.pristine"
