--- a/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
@@ -83,8 +83,7 @@
     </mat-card>
 
 
-    <button mat-flat-button color="accent" type="submit"
-      [disabled]="!latestNewsForm.form.valid || latestNewsForm.form.pristine">
+    <button mat-flat-button color="accent" type="submit">
       Opslaan
     </button>
     <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="latestNewsForm.form.pristine"
