--- a/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
@@ -82,8 +82,7 @@
       </div>
     </mat-card>
 
-    <button mat-flat-button color="accent" type="submit"
-      [disabled]="!latestWorkForm.form.valid || latestWorkForm.form.pristine">
+    <button mat-flat-button color="accent" type="submit">
       Opslaan
     </button>
     <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="latestWorkForm.form.pristine"
