--- a/angular-web-app/src/app/components/_admin/general/general.component.html
+++ b/angular-web-app/src/app/components/_admin/general/general.component.html
@@ -197,7 +197,7 @@
 
         <!-- Save -->
         <div class="mt-5">
-          <button mat-flat-button color="accent" type="submit" [disabled]="!generalContentForm.form.valid">
+          <button mat-flat-button color="accent" type="submit">
             Opslaan
           </button>
           <button mat-flat-button color="primary" type="button" class="ml-3"
