--- a/angular-web-app/src/app/components/_admin/layout-footer/layout-footer.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-footer/layout-footer.component.html
@@ -104,8 +104,7 @@
 
         </mat-card>
 
-        <button mat-flat-button color="accent" type="submit"
-          [disabled]="!footerForm.form.valid || footerForm.form.pristine">
+        <button mat-flat-button color="accent" type="submit">
           Opslaan
         </button>
         <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="footerForm.form.pristine"
