--- a/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
@@ -86,8 +86,7 @@
           </div>
         </mat-card>
 
-        <button mat-flat-button color="accent" type="submit"
-          [disabled]="!headerForm.form.valid || headerForm.form.pristine">
+        <button mat-flat-button color="accent" type="submit">
           Opslaan
         </button>
         <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="headerForm.form.pristine"
