--- a/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
@@ -77,8 +77,7 @@
           </div>
         </mat-card>
 
-        <button mat-flat-button color="accent" type="submit"
-          [disabled]="!navigationForm.form.valid || navigationForm.form.pristine && !selectedFiles.length">
+        <button mat-flat-button color="accent" type="submit">
           Opslaan
         </button>
         <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="navigationForm.form.pristine"
