--- a/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
@@ -103,8 +103,7 @@
 
     </mat-card>
 
-    <button mat-flat-button color="accent" type="submit"
-      [disabled]="!featuredForm.form.valid || featuredForm.form.pristine">
+    <button mat-flat-button color="accent" type="submit">
       Opslaan
     </button>
     <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="featuredForm.form.pristine"
