--- a/angular-web-app/src/app/components/_admin/comp-latest-calendar/comp-latest-calendar.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-calendar/comp-latest-calendar.component.html
@@ -84,8 +84,7 @@
     </mat-card>
 
 
-    <button mat-flat-button color="accent" type="submit"
-      [disabled]="!latestCalendarForm.form.valid || latestCalendarForm.form.pristine">
+    <button mat-flat-button color="accent" type="submit">
       Opslaan
     </button>
     <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="latestCalendarForm.form.pristine"
