--- a/angular-web-app/src/app/components/_admin/comp-news/comp-news.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-news/comp-news.component.html
@@ -44,8 +44,7 @@
       </div>
     </mat-card>
 
-    <button mat-flat-button color="accent" type="submit"
-      [disabled]="!newsContentForm.form.valid || newsContentForm.form.pristine">
+    <button mat-flat-button color="accent" type="submit">
       Opslaan
     </button>
     <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="newsContentForm.form.pristine"
