--- a/angular-web-app/src/app/components/_admin/comp-services/comp-services.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-services/comp-services.component.html
@@ -130,8 +130,7 @@
       </div>
     </mat-card>
 
-    <button mat-flat-button color="accent" type="submit"
-      [disabled]="!servicesForm.form.valid || servicesForm.form.pristine">
+    <button mat-flat-button color="accent" type="submit">
       Opslaan
     </button>
     <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="servicesForm.form.pristine"
