--- a/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
+++ b/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
@@ -107,8 +107,7 @@
           </mat-form-field>
         </div>
 
-        <button mat-flat-button color="accent" type="submit"
-          [disabled]="!pnfContentForm.form.valid || pnfContentForm.form.pristine">Opslaan</button>
+        <button mat-flat-button color="accent" type="submit">Opslaan</button>
         <button mat-flat-button color="primary" type="button" class="ml-3" (click)="resetForm()">Reset</button>
       </mat-card>
     </form>
