--- a/angular-web-app/src/app/components/calendar-card/calendar-card.component.html
+++ b/angular-web-app/src/app/components/calendar-card/calendar-card.component.html
@@ -20,7 +20,7 @@
   </div>
   <!-- content -->
   <div class="col-12 col-sm-9">
-    <mat-card [class]="elevation">
+    <mat-card [class]="elevation" class="h-100">
       <h6 class="txt-primary text-uppercase mt-2"> {{calendarItem.location}} </h6>
       <h3 class="mb-3"> {{calendarItem. title}} </h3>
       <span [innerHTML]="calendarItem.description"> </span>
